# x-pull-request-reviewer

./: .gitignore  .gitignore copy  .semgrep.yml  Dockerfile  Makefile  Modelfile  README.md  all_wheels.txt  docker-compose.yml  install-offline.sh  install.sh  pr6_comments.json  pyinstaller.spec  pyproject.toml  requirements.txt  setup.py  setup.sh  test-xprr-v1.2.0.sh  test_line_mapping.py  training_report.md  xprr  xprr_module.py
.github/workflows/: ci.yml
adapters/: __init__.py  java_adapter.py
agent/: change_manager.py  diff_utils.py  static_analysis.py
config/: default.yaml
docs/: training_guide.md
llm/: ollama_client.py  review_prompt.py
review/: dependency.py  documentation.py  test_coverage.py
scripts/: build-offline-package.sh  build_missing_wheels.py  download_tools_mac.sh  monitor_training.py  package_offline.sh  safe_training.py  setup.sh  start-agent.sh  test-offline-package.sh
src/: bad_code.py  xprr_agent.py
src/adapters/: go_adapter.py  python_adapter.py  terraform_adapter.py  yaml_adapter.py
src/agent/: diff_utils.py  git_utils.py  main.py
src/github/: __init__.py  pr_client.py
src/llm/: ollama_client.py  review_prompt.py  unified_client.py
src/review/: compliance.py
terraform/: README.md  gcp-cloudsql-bad.tf  gcp-gke-bad.tf  gcp_complex.tf  variables.tf
test-code-repo/: Application.java  README.md  app.py  config.yml  main.go  main.tf  script.sh
test-gemini-default/: README.md  install-offline.sh  pyproject.toml
test-gemini-default/config/: default.yaml
test-gemini-default/scripts/: build-offline-package.sh  check_github_auth.sh  install.sh  setup-gemini-auth.sh
test-gemini-default/src/: xprr_agent.py
test-gemini-default/src/adapters/: java_adapter.py
test-gemini-default/src/llm/: review_prompt.py
test-gemini-default/tests/: test_change_manager.py
test-offline-install/: requirements.txt  setup-gemini.sh
test-offline-install/scripts/: build-offline-package.sh  build_missing_wheels.py  check_offline_wheels.py  security-scan.sh  setup-gemini-auth.sh  start-agent.sh
test-offline-install/src/adapters/: go_adapter.py  java_adapter.py  python_adapter.py  shell_adapter.py  terraform_adapter.py  yaml_adapter.py
test-offline-install/src/agent/: main.py  static_analysis.py
test-offline-install/temp-gemini/: package.json
test-offline-install/tests/: test_agent_main.py
test-offline-package/: MANIFEST.txt  install-offline.sh  requirements.txt
test-offline-package/scripts/: build-offline-package.sh
test-v0.0.2/: README.md  install-offline.sh  xprr
test-v0.0.2/examples/: README.md
test-v0.0.2/scripts/: build-offline-package.sh
test-v0.0.2/src/: xprr_agent.py
test-v0.0.2/src/llm/: __init__.py  (+2 more)
test-v0.0.2/temp-gemini/: package-lock.json
test-v0.0.2/tests/: test_adapters.py
test-v1.2.1/: .gitignore  MANIFEST.txt  install-offline.sh  libggml-base.dylib  setup.py
test-v1.2.1/scripts/: build-offline-package.sh
test-v1.2.1/src/: xprr_agent.py
test-v1.2.1/tests/: test_agent_main.py
tests/: test_adapters.py  test_agent_main.py  test_change_manager.py  test_review_engines.py  test_xprr_agent.py
training_data/: fluxcd_docs.json  helm_docs.json  kubernetes_docs.json  python_docs.json  terraform_docs.json  terraform_examples.json  test_dataset.jsonl
venv-py312/: pyvenv.cfg
x-pull-request-reviewer/: COMPLETE_IMPLEMENTATION_SUMMARY.md  README.md  start-agent.sh  xprr_agent.py
x-pull-request-reviewer/adapters/: shell_adapter.py
x-pull-request-reviewer/agent/: main.py
x-pull-request-reviewer/docker/: Dockerfile
x-pull-request-reviewer/docs/: complete_training_guide.md  index.md  progress_tracking_guide.md
x-pull-request-reviewer/examples/: interactive_review_example.md
x-pull-request-reviewer/github/: pr_client.py
x-pull-request-reviewer/plugins/: README.md
x-pull-request-reviewer/review/: security.py
x-pull-request-reviewer/scripts/: terraform_docs_collector.py
x-pull-request-reviewer/tests/: test_review_engines.py
x-pull-request-reviewer/training_data/: comprehensive_training_dataset.jsonl  go_docs.json  istio_docs.json  sample_training.jsonl  terraform-aws_docs.json  terraform_core_docs.json  training_dataset_with_terraform.jsonl
(+20 files in other folders)
