[tool.poetry]
name = "x-pull-request-reviewer"
version = "0.1.0"
description = "Enterprise-grade, offline, LLM-powered pull request reviewer for Terraform, Java, Go, Python, and Shell."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
click = "^8.1.3"
requests = "^2.31.0"
pyyaml = "^6.0.1"
# Add more as needed for LLM, adapters, etc.
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 